tests/ui/g-par-role-conflict.stderr
error[E0080]: evaluation panicked: parallel arms reuse a role on the same lane
 --> tests/ui/g-par-role-conflict.rs:6:13
  |
6 |     let _ = g::par(lane_a, lane_b);
  |             ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed inside this call
  |
note: inside `par::<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>, hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<2>, hibana::global::Message<hibana::global::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>>`
 --> src/global.rs
  |
  |     program::par_binary(left, right)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::program::par_binary::<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>, hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<2>, hibana::global::Message<hibana::global::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>>`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global/program.rs
  |
  |         panic!("parallel arms reuse a role on the same lane");
  |         ----------------------------------------------------- in this macro invocation
